Fixed #38 by adding a new custom property called "position" with two options… left-aligned and menu-aligned (default is menu-aligned)

--- a/Resources/StyleSheets/unplugged.css
+++ b/Resources/StyleSheets/unplugged.css
@@ -934,6 +934,12 @@ a.menulink {
 	font-weight: bold;
 }
 
+@media screen and (min-width: 1001px) {
+    .pullleft {
+        margin-left: -43% !important;
+    }
+}
+
 @media screen and (max-width: 700px) {
 	#flatViewRowSet>li {
 		background: white;
